update font type&size. update power menu

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -53,8 +53,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = NotoSansMono:pixelsize=14
-font-1 = unifont:fontformat=truetype:size=12:heavy;
+font-0 = Noto Sans:pixelsize=12
+font-1 = unifont:fontformat=truetype:size=14:heavy;
 font-2 = WunconSiji:pixelsize=14
 font-3 = fontawesome:pixelsize=14
 
@@ -356,18 +356,18 @@ type = custom/menu
 
 format-spacing = 1
 background = #ff3399
-label-open = "  power " 
+label-open = " [  ] " 
 label-open-foreground = ${colors.foreground-alt}
 label-open-underline = ${colors.secondary}
-label-close = "  cancel "
+label-close = "[  ] "
 label-close-foreground = ${colors.foreground-alt}
 label-close-underline = ${colors.secondary}
 
-menu-0-0 = " reboot "
+menu-0-0 = " Reboot "
 menu-0-0-underline = ${colors.secondary}
 menu-0-0-foreground = #63fefe
 menu-0-0-exec = reboot
-menu-0-1 = " poweroff "
+menu-0-1 = " PowerOff "
 menu-0-1-exec = poweroff
 menu-0-1-foreground = #63fefe
 menu-0-1-underline = ${colors.secondary}
