xorg and xinit updates for nvidia-settings & .profile source

--- a/other/xorg.conf
+++ b/other/xorg.conf
@@ -45,7 +45,7 @@ Section "Device"
     Driver         "nvidia"
     VendorName     "NVIDIA Corporation"
     Option         "Coolbits" "13"
-    Options        "RegistryDwords" "PowerMizerEnable=0x1; PerfLevelSrc=0x2222; PowerMizerDefaultAC=0x1"
+    Option         "RegistryDwords" "PowerMizerEnable=0x1; PerfLevelSrc=0x2222; PowerMizerDefaultAC=0x1"
 EndSection
 
 Section "Screen"
