--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=1
 gtk-theme-name=Numix-ArchBlue
 gtk-icon-theme-name=Vivacious-NonMono-Light-Pink
-gtk-font-name=Droid Sans 11
+gtk-font-name=Noto Sans 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
