fix compton config, disable shadow & blur

--- a/.compton.conf
+++ b/.compton.conf
@@ -1,9 +1,9 @@
 # Shadow
-shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
+shadow = false;
+#no-dnd-shadow = true;
+#no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 2;
+shadow-radius = 1;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-opacity = 0.7;
@@ -23,27 +23,27 @@ xinerama-shadow-crop = true;
 
 # Opacity
 menu-opacity = 0.8;
-inactive-opacity = 0.1;
+inactive-opacity = 0.9;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = true;
 alpha-step = 0.06;
 inactive-dim = 0.2;
 inactive-dim-fixed = true;
+blur = false;
+blur-radius = 1
 blur-background = true;
 blur-background-frame = true;
-blue-radius = 2
 blur-kern = "3x3box";
-blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 blur-background-fixed = true;
-#blur-background-exclude = [
-# "window_type = 'dock'",
-# "window_type = 'desktop'",
-# "_GTK_FRAME_EXTENTS@:c"
-#];
+blur-background-exclude = [
+ "window_type = 'dock'",
+ "window_type = 'desktop'",
+ "_GTK_FRAME_EXTENTS@:c"
+];
       
 #opacity-rule = [ 
-# "99:class_g *= 'URxvt'"
+# "0:class_g = 'URxvt'"
 #];
 
 # Fading
@@ -56,14 +56,14 @@ fade-out-step = 0.03;
 fade-exclude = [ ];
 
 # Other
-backend = "glx";
+backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 60;
-vsync = "true";
+refresh-rate = 0;
+vsync = "none";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
@@ -79,12 +79,12 @@ invert-color-include = [ ];
 # GLX backend
 # glx-no-stencil = true;
 glx-copy-from-front = false;
-glx-use-copysubbuffermesa = true;
+# glx-use-copysubbuffermesa = true;
 # glx-no-rebind-pixmap = true;
 glx-swap-method = "undefined";
-glx-use-gpushader4 = true;
-xrender-sync = true;
-xrender-sync-fence = true;
+# glx-use-gpushader4 = true;
+# xrender-sync = true;
+# xrender-sync-fence = true;
 
 # Window type settings
 wintypes: {
