desktop compton defaults

--- a/.compton.conf
+++ b/.compton.conf
@@ -1,24 +1,24 @@
 # Shadow
-shadow = false;
+shadow = true;
 #no-dnd-shadow = true;
 #no-dock-shadow = true;
 clear-shadow = true;
 shadow-radius = 1;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-shadow-opacity = 0.7;
+shadow-offset-x = -3;
+shadow-offset-y = -3;
+shadow-opacity = 0.3;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
 shadow-exclude = [
  "name = 'Notification'",
- "class_g = 'Conky'",
+ "class_g = 'Polybar'",
  "class_g ?= 'Notify-osd'",
  "class_g = 'Cairo-clock'",
  "_GTK_FRAME_EXTENTS@:c"
 ];
-shadow-exclude = "n:e:Notification";
-shadow-exclude-reg = "x10+0+0";
+#shadow-exclude = "n:e:Notification";
+#shadow-exclude-reg = "x10+0+0";
 xinerama-shadow-crop = true;
 
 # Opacity
@@ -48,9 +48,9 @@ blur-background-exclude = [
 
 # Fading
 fading = true;
-fade-delta = 30;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-delta = 20;
+fade-in-step = 0.07;
+fade-out-step = 0.07;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
 fade-exclude = [ ];
