replace icons with ionicons

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -30,7 +30,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/topbar]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:HDMI-0}
 width = 100%
 height = 27
 offset-x = 0
@@ -56,7 +56,7 @@ module-margin-right = 2
 font-0 = Noto Sans:pixelsize=12
 font-1 = unifont:fontformat=truetype:size=14:heavy;
 font-2 = WunconSiji:pixelsize=14
-font-3 = fontawesome:pixelsize=14
+font-3 = Ionicons:pixelsize=14
 
 modules-left = i3 xwindow
 modules-center = date 
@@ -204,7 +204,7 @@ card = intel_backlight
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-prefix-underline = ${colors.temp}
 format-underline = #f90000
@@ -214,14 +214,14 @@ label-underline = ${colors.temp}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #63fefe
 label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp0s29u1u8
+interface = wlp0s26u1u1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -232,11 +232,11 @@ label-connected = %essid%
 label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.foreground-alt}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 =  
+ramp-signal-1 =  
+ramp-signal-2 =  
+ramp-signal-3 =  
+ramp-signal-4 =  
 ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
@@ -263,7 +263,7 @@ date-alt = " %Y-%m-%d "
 time = " %l:%M %p "
 time-alt = " %H:%M:%S "
 
-format-prefix = 
+format-prefix = " "
 format-prefix-background = ${colors.background}
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.secondary}
@@ -275,35 +275,36 @@ label-background = ${colors.background}
 type = internal/volume
 
 format-volume = <ramp-volume> <bar-volume>
-label-muted = 
-label-volume = 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 =   
+label-muted = 
+label-volume = 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 =  
 label-volume-foreground = ${colors.foreground-alt}
 label-volume-background = ${colors.tertiary}
 label-background = ${colors.secondary}
 
-format-muted-prefix = " "
+;format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #633cb0
-bar-volume-foreground-1 = #633cb0
-bar-volume-foreground-2 = #633cb0
-bar-volume-foreground-3 = #acc1c9
-bar-volume-foreground-4 = #acc1c9
-bar-volume-foreground-5 = #63fefe
-bar-volume-foreground-6 = #63fefe
+bar-volume-foreground-0 = #63fefe
+bar-volume-foreground-1 = #63fefe
+bar-volume-foreground-2 = #63fefe
+bar-volume-foreground-3 = #633cb0
+bar-volume-foreground-4 = #633cb0
+bar-volume-foreground-5 = ${colors.foreground-alt}
+bar-volume-foreground-6 = ${colors.foreground-alt}
 bar-volume-gradient = false
-bar-volume-indicator = │
+bar-volume-indicator = 
 bar-volume-indicator-font = 2
 bar-volume-indicator-foreground = #ff
-bar-volume-fill = ─
+bar-volume-fill = 
 bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty = 
+bar-volume-empty-font = 1
+bar-volume-empty-foreground = #acc1c9
 
 [module/battery]
 type = internal/battery
@@ -346,9 +347,9 @@ label = %temperature%
 label-warn = %temperature%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
@@ -356,10 +357,10 @@ type = custom/menu
 
 format-spacing = 1
 background = #ff3399
-label-open = " [  ] " 
+label-open = "  " 
 label-open-foreground = ${colors.foreground-alt}
 label-open-underline = ${colors.secondary}
-label-close = "[  ] "
+label-close = "  "
 label-close-foreground = ${colors.foreground-alt}
 label-close-underline = ${colors.secondary}
 
