update polybar icons

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -30,7 +30,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/topbar]
-monitor = ${env:MONITOR:HDMI-0}
+monitor = ${env:MONITOR:LVDS-1}
 width = 100%
 height = 27
 offset-x = 0
@@ -138,19 +138,19 @@ label-mode-padding = 2
 label-mode-foreground = #{colors.foreground}
 label-mode-background = ${colors.tertiary}
 
-label-focused = %index%
+label-focused = 
 label-focused-background = ${colors.tertiary}
 label-focused-underline = ${colors.secondary} 
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
-label-unfocused = %index%
+label-unfocused = 
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
-label-urgent = %index%!
+label-urgent = 
 label-urgent-background = ${colors.primary}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
-label-visible = %index%
+label-visible = 
 label-visible-background = ${colors.primary}
 label-visible-underline = #a26af9
 label-visible-padding = ${self.label-focused-padding}
@@ -219,7 +219,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp0s26u1u1
+interface = wlp2s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -261,7 +261,7 @@ date-alt = " %Y-%m-%d "
 time = " %l:%M %p "
 time-alt = " %H:%M:%S "
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-background = ${colors.background}
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.secondary}
@@ -295,7 +295,7 @@ bar-volume-foreground-4 = #633cb0
 bar-volume-foreground-5 = ${colors.foreground-alt}
 bar-volume-foreground-6 = ${colors.foreground-alt}
 bar-volume-gradient = false
-bar-volume-indicator = 
+bar-volume-indicator = ""
 bar-volume-indicator-font = 2
 bar-volume-indicator-foreground = #ff
 bar-volume-fill = 
