icon sizes and margins

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -30,7 +30,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/topbar]
-monitor = ${env:MONITOR:LVDS-1}
+monitor = ${env:MONITOR:HDMI-0}
 width = 100%
 height = 27
 offset-x = 0
@@ -42,10 +42,10 @@ foreground = ${colors.foreground}
 
 overline-size = 2
 overline-color = #f00
-underline-size = 2
+underline-size = 4
 underline-color = #00f
 
-border-bottom-size = 2
+border-bottom-size = 4
 border-bottom-color = ${colors.tertiary}
 
 padding-left = 0
@@ -54,7 +54,7 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = Noto Sans:pixelsize=12
-font-1 = Ionicons:pixelsize=14
+font-1 = Ionicons:pixelsize=12
 
 modules-left = i3 xwindow
 modules-center = date 
@@ -65,8 +65,7 @@ tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
-;wm-restack = bspwm
-;wm-restack = i3
+wm-restack = i3
 
 ;override-redirect = true
 
@@ -219,7 +218,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp2s0
+interface = wlp0s26u1u1
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
