--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,17 +1,17 @@
 [Settings]
 gtk-application-prefer-dark-theme=1
-gtk-theme-name=Numix-ArchBlue
-gtk-icon-theme-name=Vivacious-NonMono-Light-Pink
-gtk-font-name=Noto Sans 11
+gtk-theme-name=Flatabulous-blue-dark-new
+gtk-icon-theme-name=Vivacious-NonMono-Dark-Pink
+gtk-font-name=Sans 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=0
-gtk-menu-images=0
+gtk-button-images=1
+gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintmedium
+gtk-xft-hinting=0
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=vrgb
