--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -30,7 +30,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/topbar]
-monitor = ${env:MONITOR:HDMI-0}
+monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
 offset-x = 0
@@ -53,8 +53,15 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Noto Sans:pixelsize=12
-font-1 = Ionicons:pixelsize=12
+font-0 = "Noto Sans:size=10"
+font-1 = "Ionicons:size=10"
+font-2 = "Siji:size=10"
+font-3 = "FontAwesome:size=10"
+
+;font-0 = "Noto Sans:pixelsize=12"
+;font-1 = "Ionicons:pixelsize=12"
+;font-2 = "Siji:pixelsize=12"
+;font-3 = "FontAwesome:pixelsize=12"
 
 modules-left = i3 xwindow
 modules-center = date 
@@ -185,12 +192,12 @@ label = BL
 bar-width = 10
 bar-indicator = │
 bar-indicator-foreground = #ff
-bar-indicator-font = 2
+bar-indicator-font = 1
 bar-fill = ─
-bar-fill-font = 2
+bar-fill-font = 1
 bar-fill-foreground = #9f78e1
 bar-empty = ─
-bar-empty-font = 2
+bar-empty-font = 1
 bar-empty-foreground = ${colors.foreground-alt}
 
 [module/backlight-acpi]
@@ -218,7 +225,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp0s26u1u1
+interface = wlp0s26u1u3
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -295,10 +302,10 @@ bar-volume-foreground-5 = ${colors.foreground-alt}
 bar-volume-foreground-6 = ${colors.foreground-alt}
 bar-volume-gradient = false
 bar-volume-indicator = ""
-bar-volume-indicator-font = 2
+bar-volume-indicator-font = 1
 bar-volume-indicator-foreground = #ff
 bar-volume-fill = 
-bar-volume-fill-font = 2
+bar-volume-fill-font = 1
 bar-volume-empty = 
 bar-volume-empty-font = 1
 bar-volume-empty-foreground = #acc1c9
