--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -30,7 +30,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/topbar]
-monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:HDMI-0}
 width = 100%
 height = 27
 offset-x = 0
@@ -224,24 +224,31 @@ format-underline = #63fefe
 label = %percentage_used%%
 
 [module/wlan]
-type = internal/network
-interface = wlp0s26u1u3
-interval = 3.0
+type = custom/script
+interval = 1
+exec = "nmcli d show wlp0s26u1u3 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
+format-prefix = 
+format-prefix-foreground = ${colors.foreground-alt}
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
-format-disconnected-underline = ${self.format-connected-underline}
-
-label-connected = %essid%
-label-disconnected = %ifname% disconnected
-label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 =  
-ramp-signal-1 =  
-ramp-signal-2 =  
-ramp-signal-3 =  
-ramp-signal-4 =  
-ramp-signal-foreground = ${colors.foreground-alt}
+#[module/wlan]
+#type = internal/network
+#interface = wlp0s26u1u3
+#interval = 3.0
+#
+#format-connected = <ramp-signal> <label-connected>
+#format-connected-underline = #9f78e1
+#format-disconnected-underline = ${self.format-connected-underline}
+#
+#label-connected = %essid%
+#label-disconnected = %ifname% disconnected
+#label-disconnected-foreground = ${colors.foreground-alt}
+#
+#ramp-signal-0 =  
+#ramp-signal-1 =  
+#ramp-signal-2 =  
+#ramp-signal-3 =  
+#ramp-signal-4 =  
+#ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
