polybar should use shutdown for power controls

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -226,13 +226,13 @@ label = %percentage_used%%
 [module/wlan]
 type = custom/script
 interval = 1
-exec = "nmcli d show wlp0s26u1u3 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
+exec = "nmcli d show wlp0s26u1u1 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 
 #[module/wlan]
 #type = internal/network
-#interface = wlp0s26u1u3
+#interface = wlp0s26u1u1
 #interval = 3.0
 #
 #format-connected = <ramp-signal> <label-connected>
@@ -378,9 +378,9 @@ label-close-underline = ${colors.secondary}
 menu-0-0 = " Reboot "
 menu-0-0-underline = ${colors.secondary}
 menu-0-0-foreground = #63fefe
-menu-0-0-exec = reboot
+menu-0-0-exec = shutdown -r now
 menu-0-1 = " PowerOff "
-menu-0-1-exec = poweroff
+menu-0-1-exec = shutdown -h now
 menu-0-1-foreground = #63fefe
 menu-0-1-underline = ${colors.secondary}
 
