--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -16,16 +16,16 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi caps threads rar filecaps emerge kdbus kmod suid gnutls uuid inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb"
+SYS="acpi caps threads rar filecaps emerge kdbus kmod suid gnutls uuid inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb xpm"
 PERIPH="evdev synaptics cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
 NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap webkit priority pcap web"
 SEC="clamav gcrypt crypt ssl x509"
-LIB="static-libs unicode gzip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand"
+LIB="minizip libx264 libfaac static-libs unicode gzip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand"
 DEV="cxx cpp boost jit llvm sqlite introspection ctype gdbm json regex javascript html openssl ssl ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml2 mongo perl npm"
 DESKTOP="X xcomposite gnome-keyring qt4 qt gtk2 gtk3 gtk nsplugin source"
-GFX="aac amr faac gpl apng glamor aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc" 
+GFX="aac amr faac gpl apng glamor aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender theora fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc xvid" 
 AUDIO="audioeffects audioscrobbler system-wide coreaudio sound aac alsa alsa-plugin equalizer glib x265 realtime pulseaudio qtmedia flac jack jackdbus lame mad ogg session openal portaudio frontend id3tag quicktime mp3 alisp double-precsision"
-APP="256-color blink fading-colros focused-urgency font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell bash-completion branding"
+APP="256-color blink fading-colros focused-urgency font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell zsh-completion bash-completion branding"
 IGNORE="-static -adns -modemmanager -cups -plymouth -gnome -kde (-doc) -minimal -livecd -ffmpeg -debug -mdev -savedconfig -math -make-symlinks -pax_kernel -libproxy -nss -selinux -sep-usr -vaapi -xen"
 
 USE="${SYS} ${PERIPH} ${NET} ${SEC} ${LIB} ${DEV} ${DESKTOP} ${GFX} ${AUDIO} ${APP} ${IGNORE}"
