update power options for use with systemctl

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -378,9 +378,9 @@ label-close-underline = ${colors.secondary}
 menu-0-0 = " Reboot "
 menu-0-0-underline = ${colors.secondary}
 menu-0-0-foreground = #63fefe
-menu-0-0-exec = shutdown -r now
+menu-0-0-exec = sudo systemctl reboot
 menu-0-1 = " PowerOff "
-menu-0-1-exec = shutdown -h now
+menu-0-1-exec = sudo systemctl poweroff
 menu-0-1-foreground = #63fefe
 menu-0-1-underline = ${colors.secondary}
 
