--- a/.config/i3/config
+++ b/.config/i3/config
@@ -239,8 +239,8 @@ mode "$mode_system" {
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id shutdown -r now, mode "default"
-    bindsym Shift+s exec --no-startup-id shutdown -h now, mode "default"  
+    bindsym r exec --no-startup-id sudo systemctl reboot, mode "default"
+    bindsym Shift+s exec --no-startup-id sudo systemctl poweroff, mode "default"  
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
