enable floating window for steam & pavucontrol

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -58,17 +58,24 @@ hide_edge_borders both
 for_window [class="^.*"] border pixel 0
 new_window 1pixel
 
+##############################
+# individual window settings #
+##############################
+
+for_window [instance="Steam" class="Steam"] floating enable
+for_window [instance="pavucontrol" class="Pavucontrol"] floating enable
+
 ###########
 # startup #
 ###########
 exec --no-startup-id numlockx on
 exec --no-startup-id polybar -c /home/p3pt/.config/i3/polybar/topbar.ini topbar 
-exec --no-startup-id i3-lm l 1 /home/p3pt/.config/i3/layouts/busy.json 
 exec_always --no-startup-id feh --bg-center /home/p3pt/.config/i3/wallpapers/bg.png
 
 ###########
 # layouts #
 ###########
+exec --no-startup-id i3-lm l 1 /home/p3pt/.config/i3/layouts/busy.json 
 
 ################
 # key bindings #
@@ -231,7 +238,7 @@ mode "$mode_gaps_outer" {
 }
 
 # shutdown
-set $Locker i3lock-fancy -p -t $USER@$HOSTNAME && sleep 1
+set $Locker i3lock-fancy -t $USER@$HOSTNAME && sleep 1
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
