--- a/os/gentoo/desktop/etc/portage/make.conf
+++ b/os/gentoo/desktop/etc/portage/make.conf
@@ -3,10 +3,10 @@
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
 
-CFLAGS="-march=sandybridge -O2 -pipe"
+CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j9 -l8"
-EMERGE_DEFAULT_OPTS="--jobs 9 --load-average 8"
+MAKEOPTS="-j4 -l4"
+EMERGE_DEFAULT_OPTS="--jobs 4 --load-average 4"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
@@ -16,17 +16,17 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi caps threads rar filecaps emerge gpm kdbus kmod suid gnutls uuid inotify tools lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb"
+SYS="acpi policykit log elogind pam caps cache threads rar filecaps emerge kdbus kmod suid gnutls uuid notifier inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate keyboard mouse udev udisks xattr xkb"
 PERIPH="cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
-NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap webkit priority pcap web"
-SEC="clamav gcrypt crypt ssl x509"
-LIB="static-libs unicode gzip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand"
-DEV="cxx cpp boost jit llvm introspection ctype gdbm java json regex javascript html openssl ssl ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml2 mongo perl npm"
+NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap websocket tcl webkit priority pcap web www"
+SEC="clamav gcrypt crypt ssl x509 shadow gpg ssvl2 ssvl3"
+LIB="static-libs unicode minizip gzip zip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand"
+DEV="cxx cpp boost jit llvm introspection ctype gdbm json regex javascript html openssl ssl ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml2 mongo perl npm"
 DESKTOP="X xcomposite gnome-keyring qt4 qt gtk2 gtk3 gtk nsplugin source"
-GFX="aac amr faac gpl aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc" 
-AUDIO="audioeffects audioscrobbler system-wide coreaudio sound aac alsa alsa-plugin equalizer glib x265 realtime pulseaudio qtmedia flac jack jackdbus lame mad ogg session openal portaudio frontend id3tag quicktime mp3 alisp double-precsision"
-APP="256-color blink fading-colros focused-urgency font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell bash-completion branding"
-IGNORE="-static -adns -modemmanager -cups -plymouth -gnome -kde (-doc) -minimal -livecd -ffmpeg -debug -mdev -savedconfig -math -make-symlinks -pax_kernel -libproxy -nss -selinux -sep-usr -vaapi -xen"
+GFX="aac aacplus amr faac libx264 theora xvid opus gpl aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime slang tiles ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc" 
+AUDIO="cover webrtc-aec adplug cdio eventfd faad fifo wav int-quality fluidsynth gme chromaprint chroma convert acoustid asyncns mpdstats thumbnails libmpd libmpdclient stereo soxr libsoxr pipe recorder signalfd soundio vst stk soundcloud twolame wildmidi audacious sid audioeffects audio scrobbler libfaac crossfade lyrics coreaudio sound aac libsamplerate alsa alsa-plugin equalizer glib x265 realtime pulseaudio qtmedia flac jack jackdbus lame cue discid tremor mad ogg session openal portmidi linear portaudio frontend id3tag quicktime mp3tunes mp3 alisp double-precsision"
+APP="zsh-completion icons extras curosrs 256-color clock outputs visualizer xscreensaver blink fading-colros systray tray focused-urgency kate player ogg123 font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell bash-completion branding googledrive"
+IGNORE="-static -adns -bindist -modemmanager -cups -plymouth -gnome -kde (-doc) -minimal -livecd -ffmpeg -debug -mdev -savedconfig -math -make-symlinks -pax_kernel -libproxy -nss -selinux -sep-usr -vaapi -xen"
 
 USE="${SYS} ${PERIPH} ${NET} ${SEC} ${LIB} ${DEV} ${DESKTOP} ${GFX} ${AUDIO} ${APP} ${IGNORE}"
 
@@ -41,15 +41,16 @@ RUBY_TARGETS="ruby21 ruby22 ruby23 ruby24"
 DOTNET_TARGETS="net45 net40"
 
 # dirs
+PORTAGE_BUILDDIR="/tmp/portage_build"
 PORTDIR="/usr/portage"
 DISTDIR="${PORTDIR}/distfiles"
 PKGDIR="${PORTDIR}/packages"
 
 # video cards
-VIDEO_CARDS="nouveau nvidia"
+VIDEO_CARDS="nvidia"
 
 # input
-INPUT_DEVICES="evdev"
+INPUT_DEVICES="libinput"
 
 # license
 ACCEPT_LICENSE="*"
