update gentoo loader entry

--- a/os/gentoo/desktop/boot/loader/entries/gentoo.conf
+++ b/os/gentoo/desktop/boot/loader/entries/gentoo.conf
@@ -1,5 +1,5 @@
 title Gentoo
-linux /vmlinuz-4.9.6-gentoo-r1
-initrd /initramfs-genkernel-x86_64-4.9.6-gentoo-r1
-initrd /early_ucode.cpio
-options dolvm rootfstype=ext4 root=/dev/mapper/gentoovg-rootlv real_init=/usr/lib/systemd/systemd quiet console=tty1 nvidia-drm.modeset=1 systemd.show_status=1 loglevel=1 
+linux /vmlinuz
+initrd /initramfs
+initrd /intelucode
+options dolvm rootfstype=ext4 root=/dev/mapper/gentoovg-rootlv real_init=/usr/lib/systemd/systemd splash=quiet console=tty1 nvidia-drm.modeset=1 systemd.show_status=1 systemd.legacy_systemd_cgroup_controller=yes loglevel=1 
