update gentoo loader entry for laptop

--- a/os/gentoo/laptop/boot/loader/entries/gentoo.conf
+++ b/os/gentoo/laptop/boot/loader/entries/gentoo.conf
@@ -1,5 +1,5 @@
 title Gentoo
-linux /vmlinuz-4.9.6-gentoo-r1
-initrd /initramfs-genkernel-x86_64-4.9.6-gentoo-r1
-initrd /early_ucode.cpio
+linux /vmlinuz
+initrd /initramfs
+initrd /intelucode
 options rootfstype=ext4 root=/dev/sda3 real_init=/usr/lib/systemd/systemd quiet console=tty1 systemd.show_status=1 systemd.legacy_systemd_cgroup_controller=yes loglevel=1 
