--- a/os/gentoo/desktop/etc/portage/make.conf
+++ b/os/gentoo/desktop/etc/portage/make.conf
@@ -16,7 +16,7 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi policykit log elogind pam caps cache threads rar filecaps emerge kdbus kmod suid gnutls uuid notifier inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate keyboard mouse udev udisks xattr xkb"
+SYS="acpi policykit log elogind pam caps cache threads rar filecaps emerge kdbus kmod suid gnutls uuid notifier inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate keyboard mouse udev udisks xattr xkb watchdog"
 PERIPH="cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
 NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap websocket tcl webkit priority pcap web www"
 SEC="clamav gcrypt crypt ssl x509 shadow gpg ssvl2 ssvl3"
