--- a/os/gentoo/laptop/etc/portage/make.conf
+++ b/os/gentoo/laptop/etc/portage/make.conf
@@ -5,8 +5,8 @@
 
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j3 -l2"
-EMERGE_DEFAULT_OPTS="--jobs 3 --load-average 2"
+MAKEOPTS="-j1 -l2"
+EMERGE_DEFAULT_OPTS="--jobs 1 --load-average 2"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
@@ -16,7 +16,7 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi caps threads rar filecaps emerge kdbus kmod suid gnutls uuid inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb xpm"
+SYS="acpi policykit elogind caps threads rar filecaps emerge kdbus kmod suid gnutls uuid inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate udev udisks xattr xkb xpm"
 PERIPH="evdev synaptics cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
 NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap webkit priority pcap web"
 SEC="clamav gcrypt gpg crypt ssl x509 shadow sslv2 sslv3 pkcs11"
