--- a/os/gentoo/desktop/etc/portage/make.conf
+++ b/os/gentoo/desktop/etc/portage/make.conf
@@ -5,8 +5,8 @@
 
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j4 -l4"
-EMERGE_DEFAULT_OPTS="--jobs 4 --load-average 4"
+MAKEOPTS="-j4 -l5"
+EMERGE_DEFAULT_OPTS="--jobs 4 --load-average 5"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
 # Please consult http://www.gentoo.org/doc/en/change-chost.xml before changing.
@@ -16,16 +16,16 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 
-SYS="acpi policykit log elogind pam caps cache threads rar filecaps emerge kdbus kmod suid gnutls uuid notifier inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate keyboard mouse udev udisks xattr xkb watchdog"
+SYS="acpi av policykit log elogind pam caps cache threads rar filecaps emerge kdbus kmod suid gnutls uuid notifier inotify lz4 mhash modules startup-notifications experimental cpudetection nls session sys-log symlink systemd chroot logrotate keyboard mouse udev udisks xattr xkb watchdog"
 PERIPH="cdr dvd dvdr ieee1394 dbus memcached memlimit usb"
 NET="adns dhclient modemmanager ppp wext wifi zeroconf ftp ipv6 http networkmanager nat sockets socks5 ssl bittorrent vala openssl openssh dns fping ncat tcpdump pcapnav libssh ndiff nping zenmap websocket tcl webkit priority pcap web www"
 SEC="clamav gcrypt crypt ssl x509 shadow gpg ssvl2 ssvl3"
-LIB="static-libs unicode minizip gzip zip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand"
-DEV="cxx cpp boost jit llvm introspection ctype gdbm json regex javascript html openssl ssl ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml2 mongo perl npm"
-DESKTOP="X xcomposite gnome-keyring qt4 qt gtk2 gtk3 gtk nsplugin source"
+LIB="static-libs unicode minizip gzip zip glib libcaca libnotify libwww mtp multilib taglib truetype ebook freehand libcanberra libindicate"
+DEV="cxx cpp boost jit llvm introspection ctype gdbm json regex javascript html openssl ssl ssh lua luajit cli console mysql postgres markdown vim oracle nodejs redis libxml3 mongo perl npm"
+DESKTOP="X xcomposite gnome-keyring qt4 gtk3 nsplugin source"
 GFX="aac aacplus amr faac libx264 theora xvid opus gpl aalib openvdb nouveau colord colors cg video glew css decode xrender xrandr cuda dga dri3 exif libav pgf blender fbcon fbcondecor gif jpeg kms glfw png mpeg mp4 nvidia emoticons graphicsmagick imagemagick gstreamer mime slang tiles ncurses opengl raw svg v4l vaapi vdpau x264 xv xvmc" 
 AUDIO="cover webrtc-aec adplug cdio eventfd faad fifo wav int-quality fluidsynth gme chromaprint chroma convert acoustid asyncns mpdstats thumbnails libmpd libmpdclient stereo soxr libsoxr pipe recorder signalfd soundio vst stk soundcloud twolame wildmidi audacious sid audioeffects audio scrobbler libfaac crossfade lyrics coreaudio sound aac libsamplerate alsa alsa-plugin equalizer glib x265 realtime pulseaudio qtmedia flac jack jackdbus lame cue discid tremor mad ogg session openal portmidi linear portaudio frontend id3tag quicktime mp3tunes mp3 alisp double-precsision"
-APP="zsh-completion icons extras curosrs 256-color clock outputs visualizer xscreensaver blink fading-colros systray tray focused-urgency kate player ogg123 font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell bash-completion branding googledrive"
+APP="zsh-completion icons extras curosrs 256-color clock outputs visualizer xscreensaver blink fading-colros systray tray focused-urgency kate notifications notification player ogg123 font-styles mousehweel unicode3 wxwidth calendar curl mozilla xft corefonts hdri infinality fancy fontforge otf ttf utils plugins magic clipboard motif cairo iconv mplayer musepack pdf readline spell bash-completion branding googledrive"
 IGNORE="-static -adns -bindist -modemmanager -cups -plymouth -gnome -kde (-doc) -minimal -livecd -ffmpeg -debug -mdev -savedconfig -math -make-symlinks -pax_kernel -libproxy -nss -selinux -sep-usr -vaapi -xen"
 
 USE="${SYS} ${PERIPH} ${NET} ${SEC} ${LIB} ${DEV} ${DESKTOP} ${GFX} ${AUDIO} ${APP} ${IGNORE}"
