--- a/.config/i3/config
+++ b/.config/i3/config
@@ -70,6 +70,7 @@ for_window [instance="lxapperance" class="Lxappearance"] floating enable
 # startup #
 ###########
 exec --no-startup-id numlockx on
+exec --no-startup-id gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec --no-startup-id polybar -c /home/p3pt/.config/i3/polybar/topbar.ini topbar 
 exec_always --no-startup-id feh --bg-center /home/p3pt/.config/i3/wallpapers/bg.png
 
