--- a/.compton.conf
+++ b/.compton.conf
@@ -1,36 +1,38 @@
 # Shadow
 shadow = true;
-#no-dnd-shadow = true;
-#no-dock-shadow = true;
+no-dnd-shadow = true;
+no-dock-shadow = true;
 clear-shadow = true;
-shadow-radius = 1;
-shadow-offset-x = -3;
-shadow-offset-y = -3;
-shadow-opacity = 0.3;
-shadow-red = 0.0;
-shadow-green = 0.0;
-shadow-blue = 0.0;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+shadow-opacity = 0.7;
+#shadow-red = 0.0;
+#shadow-green = 0.0;
+#shadow-blue = 0.0;
 shadow-exclude = [
- "name = 'Notification'",
+ "! name~=''",
+ "n:e:Notification",
+ "n:w:*Firefox",
+ "n:w:*Chromium*",
+ "n:w:*Steam*",
+ "n:w:*Google-chrome*",
  "class_g = 'Polybar'",
- "class_g ?= 'Notify-osd'",
+ "class_g = 'Notify-osd'",
  "class_g = 'Cairo-clock'",
  "_GTK_FRAME_EXTENTS@:c"
 ];
-#shadow-exclude = "n:e:Notification";
-#shadow-exclude-reg = "x10+0+0";
-xinerama-shadow-crop = true;
 
 # Opacity
 menu-opacity = 0.8;
-inactive-opacity = 0.9;
+inactive-opacity = 0.8;
 # active-opacity = 0.8;
 frame-opacity = 0.7;
 inactive-opacity-override = true;
 alpha-step = 0.06;
 inactive-dim = 0.2;
 inactive-dim-fixed = true;
-blur = false;
+blur = true;
 blur-radius = 1
 blur-background = true;
 blur-background-frame = true;
@@ -48,29 +50,29 @@ blur-background-exclude = [
 
 # Fading
 fading = true;
-fade-delta = 20;
-fade-in-step = 0.07;
-fade-out-step = 0.07;
+fade-delta = 10;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
 # no-fading-openclose = true;
 # no-fading-destroyed-argb = true;
 fade-exclude = [ ];
 
 # Other
-backend = "xrender";
+backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-# use-ewmh-active-win = true;
+use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = "opengl";
 dbe = false;
 paint-on-overlay = true;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+#focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
@@ -88,5 +90,5 @@ glx-swap-method = "undefined";
 
 # Window type settings
 wintypes: {
- tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+ tooltip = { fade = true; shadow = false; focus = true; };
 };
