use non-dark adwaita theme

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
 gtk-application-prefer-dark-theme=1
-gtk-theme-name=Adwaita-dark
+gtk-theme-name=Adwaita
 gtk-icon-theme-name=Vivacious-NonMono-Light-Pink
 gtk-font-name=Noto Sans 10
 gtk-cursor-theme-name=Adwaita
@@ -12,6 +12,6 @@ gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
-gtk-xft-hinting=1
+gtk-xft-hinting=0
 gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=vrgb
