--- a/.config/i3/config
+++ b/.config/i3/config
@@ -67,6 +67,7 @@ for_window [instance="Steam" class="Steam"] floating enable
 for_window [instance="pavucontrol" class="Pavucontrol"] floating enable
 for_window [instance="lxapperance" class="Lxappearance"] floating enable
 for_window [instance="seahorse" class="Seahorse"] floating enable
+for_window [instance="pcmanfm" class="Pcmanfm"] floating enable
 
 ###########
 # startup #
