reorder polybar modules

--- a/.config/i3/polybar/topbar.ini
+++ b/.config/i3/polybar/topbar.ini
@@ -65,7 +65,7 @@ font-3 = "FontAwesome:size=12"
 
 modules-left = i3 xwindow
 modules-center = date 
-modules-right = volume cmus memory cpu wlan temperature powermenu
+modules-right = mpd wlan cpu memory temperature volume powermenu
 
 tray-position = right
 tray-padding = 2
@@ -226,7 +226,7 @@ label = %percentage_used%%
 [module/wlan]
 type = custom/script
 interval = 1
-exec = "nmcli d show wlp0s26u1u1 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
+exec = "nmcli d show wlp0s26u1u5 | grep 'GENERAL.CONNECTION' | awk '{print $2}'"
 format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 
