--- a/os/gentoo/desktop/usr/src/linux/.config
+++ b/os/gentoo/desktop/usr/src/linux/.config
@@ -1041,7 +1041,7 @@ CONFIG_IP_VS_PROTO_UDP=y
 #
 # IPVS scheduler
 #
-# CONFIG_IP_VS_RR is not set
+CONFIG_IP_VS_RR=y
 # CONFIG_IP_VS_WRR is not set
 # CONFIG_IP_VS_LC is not set
 # CONFIG_IP_VS_WLC is not set
