fix hostname text

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -72,7 +72,7 @@ for_window [instance="pcmanfm" class="Pcmanfm"] floating enable
 ###########
 # startup #
 ###########
-set $locker "i3lock-fancy -t $USER@$HOST && sleep 1"
+set $locker "i3lock-fancy -t $USER@$HOSTNAME && sleep 1"
 exec --no-startup-id numlockx on
 exec --no-startup-id polybar -c ~/.config/i3/polybar/topbar.ini topbar
 exec_always --no-startup-id feh --bg-center ~/.config/i3/wallpapers/bg.png
